--- a/pages-1.0.0/pages/charts/pages-api/values.yaml
+++ b/pages-1.0.0/pages/charts/pages-api/values.yaml
@@ -15,6 +15,12 @@ service:
   targetPort: 8080
 
 
+serviceConf:
+  - name: protocol
+    value: TCP
+  - name: targetPort
+    value: 8080
+
 imagePullPolicy: Always
 
 
